--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -359,40 +359,6 @@ body {
     }
 }
 
-@media only screen and (max-width: 1750px) {
-    .slider__box {
-        width: 35%;
-    }
-}
-@media only screen and (max-width: 1550px) {
-    .slider__box {
-        width: 45%;
-    }
-    .slider__fig {
-        width: 40%;
-    }
-    .slider__text-container {
-        left: 50%;
-    }
-}
-@media only screen and (max-width: 1250px) {
-    .slider__box {
-        width: 97%;
-    }
-    .slider__fig {
-        width: 25%;
-    }
-    .slider__text-container {
-        left: 30%;
-    }
-    .slider__arrow-left {
-        display: none;
-    }
-    .slider__arrow-right {
-        display: none;   
-    }
-}
-
 .main {
     margin: 5em auto 0 auto;
     // width: 90%;
@@ -442,6 +408,8 @@ body {
         margin-right: 50%;
         display: inline-block;
         position: relative;
+        text-decoration: underline;
+        cursor: pointer;
     }
     &__box {
         margin: 2em;
@@ -486,5 +454,201 @@ body {
         border-radius: 3em;
         font-weight: bold;
         cursor: pointer;
+    }
+    &__hearts {
+        :nth-child(1) {
+            color: $highlight-color;
+        }
+        :nth-child(2) {
+            color: $highlight-color;
+        }
+        :nth-child(3) {
+            color: $highlight-color;
+        }
+        :nth-child(4) {
+            color: $font-color2;
+        }
+        :nth-child(5) {
+            color: $font-color2;
+        }
+    }
+}
+
+
+@media only screen and (max-width: 1750px) {
+    .slider__box {
+        width: 35%;
+    }
+}
+@media only screen and (max-width: 1550px) {
+    .slider__box {
+        width: 45%;
+    }
+    .slider__fig {
+        width: 40%;
+    }
+    .slider__text-container {
+        left: 50%;
+    }
+}
+@media only screen and (max-width: 1350px) {
+    .main {
+        display: block;
+        &__sort {
+            margin: 2em 0;
+            text-align: center;
+        }
+        &__line {
+            left: 20%;
+        }
+        &__box {
+            width: 60%;
+            margin: 2em auto;
+            display: block;
+        }
+        &__best-container {
+            display: inline-block;
+        }
+    }
+}
+@media only screen and (max-width: 1250px) {
+    .slider__box {
+        width: 96%;
+    }
+    .slider__fig {
+        width: 25%;
+        top: 50%;
+        left: 0.5em;
+        transform: translateY(-50%);
+
+    }
+    .slider__text-container {
+        left: 30%;
+    }
+    .slider__arrow-left {
+        display: none;
+    }
+    .slider__arrow-right {
+        display: none;   
+    }
+
+    .main {
+        &__genre-text {
+            display: block;
+            text-align: center;
+            margin:  1em 0;
+        }
+        &__line {
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        &__link {
+            text-align: center;
+        }
+        &__box {
+            width: 80%;
+        }
+        &__fig {
+            width: 25%;
+        }
+    }
+}
+@media only screen and (max-width: 1000px) {
+    .main {
+        &__best-container {
+            width: 30%;
+        }
+        
+        &__fig {
+            left: -2em;
+            width: 35%;
+        }
+        &__box {
+            height: 46vh;
+        }
+    }
+}
+
+.popup {
+    display: grid;
+    grid-template-columns: 40% 1fr;
+    background: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+  
+    // display: none;
+    &__headline {
+        padding-bottom: 1em;
+        font-weight: 500;
+        font-size: 1.4em;
+        grid-column: 1/4;
+        justify-self: center;
+        & span {
+            font-weight: bold;
+        }
+    }
+
+    &__img {
+        margin: 1em 1em;
+     
+    }
+
+    &__fig-img {
+        display: inline-block;
+    grid: 2/2;
+    margin: 1em 1em;
+    width: 15vw;
+    }
+
+    &-contact {
+       width: 20vw;
+        grid: 3/4;
+    }
+
+    &-contact__input {
+        display: inline-block;
+        font-size: 1.2em;
+        line-height: 2rem;
+        padding: 0.5em 0;
+        width: 99%;
+        border-width: 0 0 1px;
+        border-style: solid;
+    }
+
+    &-contact__label {
+        font-size: 1em;
+        font-style: normal;
+    }
+
+    &-contact__btn {
+        grid-column: 1/2;
+        margin: 1em auto;
+        font-size: 1em;
+        width: 10em;
+        height: 2em;
+        border: 0.1em solid green;
+        border-radius: 50px;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
+        cursor: pointer;
+    }
+    &__wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(195, 195, 195, 0.8);
+        z-index: 1002;
+    }
+    &__close {
+        position: absolute;
+        top: 0;
+        right: 0;
     }
 }
