--- a/content/css/style.css
+++ b/content/css/style.css
@@ -205,6 +205,71 @@ body {
   text-decoration: none;
 }
 
+.main__tilmelding {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  background-color: #fff;
+  width: 80%;
+  margin: 0 auto;
+  -webkit-box-shadow: 2px 5px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 5px 30px rgba(0, 0, 0, 0.25);
+}
+
+@media (max-width: 1200px) {
+  .main__tilmelding {
+    -ms-grid-columns: 50% auto;
+        grid-template-columns: 50% auto;
+  }
+}
+
+.main__tilmelding-form {
+  display: -ms-grid;
+  display: grid;
+  margin: 0 auto;
+  grid-gap: 2.5em;
+}
+
+.main__tilmelding-btn {
+  height: 3em;
+  background: transparent;
+  border-radius: 25px;
+  border: 2px solid #20CAAE;
+  color: #20CAAE;
+  width: 400px;
+  height: 40px;
+}
+
+@media (min-width: 992px) {
+  .main__tilmelding-btn {
+    width: 40vw;
+  }
+}
+
+@media (min-width: 767px) {
+  .main__tilmelding-btn {
+    width: 40vw;
+  }
+}
+
+.main__tilmelding-input {
+  border-top: transparent;
+  border-left: transparent;
+  border-bottom: 1px solid #E5E5E5E5;
+  border-right: transparent;
+  width: 250px;
+  margin: 0 auto;
+  height: 20px;
+  outline: none;
+  font-size: 1em;
+}
+
+.main__tilmelding-img {
+  display: block;
+  width: 100%;
+}
+
 .container-about, .container-contact, .mail {
   display: -ms-grid;
   display: grid;
@@ -302,7 +367,7 @@ body {
 
 .container-contact__text-days, .container-contact__text-cdays, .container-contact__text-ctimes, .container-contact__text-times, .container-contact__text-info, .container-contact .container-contact__headings {
   list-style: none;
-  margin: .4em .2em;
+  margin: .4em 1.2em;
 }
 
 @media (min-width: 1200px) {
@@ -350,9 +415,9 @@ body {
 .footer__content {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-  height: 70px;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  height: 165px;
   background-color: #20CAAE;
   text-align: center;
   font-size: 1em;
@@ -360,18 +425,41 @@ body {
   padding: 25px;
 }
 
+@media (min-width: 767px) {
+  .footer__content {
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: 70px;
+  }
+}
+
 .footer__content a {
   text-decoration: none;
   color: white;
   padding: 1em;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
-.footer__content-button:last-child {
-  border: unset;
+.footer__content a:hover {
+  color: #414141;
+}
+
+@media (min-width: 767px) {
+  .footer__content-button:last-child {
+    border: unset;
+  }
 }
 
 .footer__content-button {
   border-right: 1px solid white;
+  border-left: 1px solid white;
+}
+
+@media (min-width: 767px) {
+  .footer__content-button {
+    border-left: unset;
+  }
 }
 
 .footer {
