--- a/content/css/style.css
+++ b/content/css/style.css
@@ -217,7 +217,7 @@ body {
   box-shadow: 2px 5px 30px rgba(0, 0, 0, 0.25);
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 1200px) {
   .main__tilmelding {
     -ms-grid-columns: 50% auto;
         grid-template-columns: 50% auto;
