--- a/content/css/style.css
+++ b/content/css/style.css
@@ -133,6 +133,47 @@ body {
   color: #414141;
 }
 
+.header__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header__menu .header-strip-item {
+  position: relative;
+  display: inline-block;
+}
+
+.header__menu .header-strip-item:hover .header__list {
+  display: block;
+}
+
+.header__menu .header__dropdown {
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: #FFFFFF;
+  padding: 0  1em;
+  -webkit-box-shadow: 0 15px 10px 2px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 15px 10px 2px rgba(0, 0, 0, 0.25);
+}
+
+.header__menu .header__dropdown .header__list {
+  padding: 1.8em 0;
+  display: none;
+}
+
+.header__menu .header__dropdown .header__list .header__list-link {
+  text-decoration: none;
+  color: #414141;
+}
+
 .header__nav {
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -176,53 +217,8 @@ body {
 
 :hover > .header__nav-menu-item-dropdown {
   display: block;
-}
-
-.header__nav-menu-item-link {
-  color: #414141;
-  text-decoration: none;
-}
-
-.header__nav {
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: -webkit-transform 200ms ease-in-out;
-  transition: -webkit-transform 200ms ease-in-out;
-  transition: transform 200ms ease-in-out;
-  transition: transform 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
-  width: 20%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  background-color: #FFFFFF;
-  height: 100%;
-}
-
-.header__nav-arrow {
-  display: block;
-  margin: 1em;
-  padding: 1em;
-  cursor: pointer;
-}
-
-.header__nav-logo {
-  display: block;
-  width: 120px;
-  margin: 2em auto;
-}
-
-.header__nav-menu {
-  margin-top: 2em;
-}
-
-.header__nav-menu-item {
-  list-style-type: none;
-  padding: 1em 0;
-  text-align: center;
-}
-
-:hover > .header__nav-menu-item-dropdown {
-  display: block;
+  opacity: 1;
+  max-height: 200px;
 }
 
 .header__nav-menu-item-link {
@@ -231,14 +227,23 @@ body {
 }
 
 .header__nav-menu-item-dropdown {
-  display: none;
+  margin: 0px;
+  padding: 0px;
+  background: #FFF;
+  width: 100%;
+  max-height: 0px;
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: max-height 0.2s linear 0s;
+  transition: max-height 0.2s linear 0s;
 }
 
 .header__nav-menu-item-dropdown-item {
   list-style-type: none;
   padding: 1em 0;
   text-align: center;
-  background-color: #ececec;
+  background-color: #f8f8f8;
 }
 
 .header__nav-menu-item-dropdown-item-link {
