--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -182,6 +182,36 @@ body {
     }
   }
 
+  .header__menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+      .header-strip-item {
+            position: relative;
+            display: inline-block;
+        &:hover .header__list{
+            display: block;
+        }
+      }
+    .header__dropdown {
+        position: absolute;
+        left: 0;
+        right: 0;
+        background-color: $bg-box-color;
+        padding: 0  1em;
+        box-shadow: 0 15px 10px 2px rgba(0,0,0,0.25);
+        .header__list {
+            padding: 1.8em 0;
+            // text-align: center;
+            display: none;
+            .header__list-link {
+                text-decoration: none;
+                color: $font-color;
+            }
+        }
+    }
+  }
+
   .header__nav {
       transform: translateX(100%);
       transition: transform 200ms ease-in-out;
@@ -212,54 +242,27 @@ body {
               text-align: center;
                 :hover > &-dropdown{
                     display: block;
+                    opacity: 1;
+                    max-height: 200px;
                 }
               &-link {
                   color: $font-color;
                   text-decoration: none;
+
               }
-            }
-        }
-    }
-.header__nav {
-    transform: translateX(100%);
-    transition: transform 200ms ease-in-out;
-    width: 20%;
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-color: $bg-box-color;
-    height: 100%;
-    &-arrow {
-        display: block;
-        margin: 1em;
-        padding: 1em;
-        cursor: pointer;
-    }
-    &-logo {
-        display: block;
-        width: 120px;
-        margin: 2em auto;
-    }
-    &-menu {
-        margin-top: 2em;
-        &-item {
-            list-style-type: none;
-            padding: 1em 0;
-            text-align: center;
-             :hover>&-dropdown {
-                display: block;
-            }
-            &-link {
-                color: $font-color;
-                text-decoration: none;
-            }
-            &-dropdown {
-                display: none;
+              &-dropdown {
+                margin: 0px;
+                padding: 0px;
+                background: #FFF;
+                width: 100%; max-height: 0px;
+                overflow: hidden;
+                box-sizing: border-box;
+                transition: max-height 0.2s linear 0s;
                 &-item {
                     list-style-type: none;
                     padding: 1em 0;
                     text-align: center;
-                    background-color: #ececec;
+                    background-color: #f8f8f8;
                     &-link {
                         color: $font-color;
                         text-decoration: none;
