--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -98,6 +98,124 @@ body {
   display: inline-block;
 }
 
+.header__strip {
+  position: relative;
+  z-index: 101;
+  width: 100%;
+  background-color: #fff;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 20% 1fr 20%;
+      grid-template-columns: 20% 1fr 20%;
+}
+
+.header__strip-dropdown {
+  color: #414141;
+  text-decoration: none;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.header__strip-logo {
+  width: 120px;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.header__strip-mobile-tab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-self: center;
+  cursor: pointer;
+}
+
+.header__strip-mobile-tab-container {
+  display: inline-block;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.header__strip-mobile-tab-container-lines {
+  display: block;
+  height: 2px;
+  margin: 0.2em 0;
+  background-color: #414141;
+}
+
+.header__strip-mobile-tab-container-lines:nth-child(1) {
+  width: 20px;
+}
+
+.header__strip-mobile-tab-container-lines:nth-child(2) {
+  width: 10px;
+}
+
+.header__strip-mobile-tab-container-lines:nth-child(3) {
+  width: 15px;
+}
+
+.header__strip-mobile-tab-line {
+  display: inline-block;
+  height: 30px;
+  width: 2px;
+  margin: 0 1em;
+  background-color: #414141;
+}
+
+.header__strip-mobile-tab-text {
+  display: inline-block;
+}
+
+.header__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header__menu .header-strip-item {
+  position: relative;
+  display: inline-block;
+}
+
+.header__menu .header-strip-item:hover .header__list {
+  display: block;
+}
+
+.header__menu .header__dropdown {
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  padding: 0  1em;
+  -webkit-box-shadow: 0 15px 10px 2px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 15px 10px 2px rgba(0, 0, 0, 0.25);
+}
+
+.header__menu .header__dropdown .header__list {
+  padding: 1.8em 0;
+  display: none;
+}
+
+.header__menu .header__dropdown .header__list .header__list-link {
+  text-decoration: none;
+  color: #414141;
+}
+
 .header__menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -182,6 +300,8 @@ body {
 
 :hover > .header__nav-menu-item-dropdown {
   display: block;
+  opacity: 1;
+  max-height: 200px;
 }
 
 .header__nav-menu-item-link {
@@ -190,14 +310,23 @@ body {
 }
 
 .header__nav-menu-item-dropdown {
-  display: none;
+  margin: 0px;
+  padding: 0px;
+  background: #FFF;
+  width: 100%;
+  max-height: 0px;
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: max-height 0.2s linear 0s;
+  transition: max-height 0.2s linear 0s;
 }
 
 .header__nav-menu-item-dropdown-item {
   list-style-type: none;
   padding: 1em 0;
   text-align: center;
-  background-color: #ececec;
+  background-color: #f8f8f8;
 }
 
 .header__nav-menu-item-dropdown-item-link {
