--- a/content/css/styles.scss
+++ b/content/css/styles.scss
@@ -135,6 +135,93 @@ body {
     }
 }
 
+.header {
+    &__strip {
+      position: relative;
+      z-index: 101;
+      width: 100%;
+      background-color: $bg-box-color;
+      display: grid;
+      grid-template-columns: 20% 1fr 20%;
+      &-dropdown {
+          color: $font-color;
+          text-decoration: none;
+          align-self: center;
+          justify-self: center;
+      }
+      &-logo {
+          width: 120px;
+          justify-self: center;
+      }
+      &-mobile-tab {
+          display: flex;
+          align-self: center;
+          align-items: center;
+          justify-self: center;
+          cursor: pointer;
+          &-container {
+              display: inline-block;
+              transform: rotateY(180deg);
+              &-lines {
+                  display: block;
+                  height: 2px;
+                  margin: 0.2em 0;
+                  background-color: $font-color;
+                  &:nth-child(1) {
+                      width: 20px;
+                  }
+                  &:nth-child(2) {
+                      width: 10px;
+                  }
+                  &:nth-child(3) {
+                      width: 15px;
+                  }
+              }
+          }
+          &-line {
+              display: inline-block;
+              height: 30px;
+              width: 2px;
+              margin: 0 1em;
+              background-color: $font-color;
+          }
+          &-text {
+              display: inline-block;
+          }
+      }
+  }
+}
+
+.header__menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .header-strip-item {
+      position: relative;
+      display: inline-block;
+      &:hover .header__list {
+          display: block;
+      }
+  }
+  .header__dropdown {
+      position: absolute;
+      left: 0;
+      right: 0;
+      background-color: $bg-box-color;
+      padding: 0  1em;
+      box-shadow: 0 15px 10px 2px rgba(0,0,0,0.25);
+      .header__list {
+          padding: 1.8em 0;
+          // text-align: center;
+          display: none;
+          .header__list-link {
+              text-decoration: none;
+              color: $font-color;
+          }
+      }
+  }
+}
+
 .header__menu {
   display: flex;
   align-items: center;
@@ -155,6 +242,7 @@ body {
       box-shadow: 0 15px 10px 2px rgba(0,0,0,0.25);
       .header__list {
           padding: 1.8em 0;
+          // text-align: center;
           display: none;
           .header__list-link {
               text-decoration: none;
@@ -194,6 +282,8 @@ body {
             text-align: center;
               :hover > &-dropdown{
                   display: block;
+                  opacity: 1;
+                  max-height: 200px;
               }
             &-link {
                 color: $font-color;
@@ -201,12 +291,18 @@ body {
 
             }
             &-dropdown {
-              display: none;
+              margin: 0px;
+              padding: 0px;
+              background: #FFF;
+              width: 100%; max-height: 0px;
+              overflow: hidden;
+              box-sizing: border-box;
+              transition: max-height 0.2s linear 0s;
               &-item {
                   list-style-type: none;
                   padding: 1em 0;
                   text-align: center;
-                  background-color: #ececec;
+                  background-color: #f8f8f8;
                   &-link {
                       color: $font-color;
                       text-decoration: none;
